创建实例，生命周期

--- a/demo1/index.html
+++ b/demo1/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>接苹果</title>
+    <title>cactch apple</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <script src="./js/phaser.min.js"></script>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <div id="game"></div>
